--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://goodmorningmajor.com","creator":"http://perfmonkey.com","rand":0.3038218510337174,"created_at":"2014-07-28T19:25:34.127Z"}
